# ffindex_soedinglab

./: .dockerignore  CMakeLists.txt  Dockerfile  README  README.md
src/: CMakeLists.txt  Makefile  Makefile.osx  ffindex.c  ffindex.h  ffindex_apply.c  ffindex_apply_mpi.c  ffindex_build.c  ffindex_from_fasta.c  ffindex_get.c  ffindex_modify.c  ffindex_order.c  ffindex_sort.c  ffutil.c  ffutil.h  twalkmisc.h
src/ext/: CMakeLists.txt  fmemopen.c
src/gnu_getopt/: CMakeLists.txt  gnu_getopt.c  gnu_getopt.h
src/mpq/: mpq.c  mpq.h
